# NucleusESP32

./: .clang-format  .clang-tidy  .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  NucleusESP32.code-workspace  README.md  compile_commands.json  custom_partition.csv  diagram.json  docker-compose.yml  file_explorer.patch  generate_compile_commands.py  main.py  platformio.ini  warmpup1.sub  warmup2.sub
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
boards/: JC4827W543C.json  README.md  esp32-2432S024C.json  esp32-2432S024N.json  esp32-2432S024R.json  esp32-2432S028R.json  esp32-2432S028Rv2.json  esp32-2432S028Rv3.json  esp32-2432S032C.json  esp32-2432S032N.json  esp32-2432S032R.json  esp32-2432W328C.json  esp32-3248S035C.json  esp32-3248S035R.json
data/subghz/captures/: bell.sub
include/: lv_conf.h
lib/IRremoteESP8266/: .gitattributes  .gitignore  .piopm  Doxyfile  README.md  README_de.md  README_fr.md  README_nl.md  ReleaseNotes.md  SECURITY.md  SupportedProtocols.md  keywords.txt  library.json  library.properties  platformio.ini
lib/IRremoteESP8266/.github/: CONTRIBUTING.md  Contributors.md
lib/IRremoteESP8266/src/: IRac.cpp  IRac.h  IRmacros.h  IRrecv.cpp  IRrecv.h  IRremoteESP8266.h  IRsend.cpp  IRsend.h  IRtext.cpp  IRtext.h  IRtimer.cpp  IRtimer.h  IRutils.cpp  IRutils.h  i18n.h  ir_Airton.cpp  ir_Airton.h  ir_Airwell.cpp  ir_Airwell.h  ir_Aiwa.cpp  ir_Amcor.cpp  ir_Amcor.h  ir_Argo.cpp  ir_Argo.h  ir_Arris.cpp  ir_Bose.cpp  ir_Carrier.cpp  ir_Carrier.h  ir_ClimaButler.cpp  ir_Coolix.cpp  ir_Coolix.h  ir_Corona.cpp  ir_Corona.h  ir_Daikin.cpp  ir_Daikin.h  ir_Delonghi.cpp  ir_Delonghi.h  ir_Denon.cpp  ir_Dish.cpp  ir_Doshisha.cpp  (+94 more)
lib/IRremoteESP8266/test/: IRac_test.cpp  IRrecv_test.cpp  IRrecv_test.h  IRsend_test.cpp  IRsend_test.h  IRutils_test.cpp  Makefile  ir_Airton_test.cpp  ir_Airwell_test.cpp  ir_Aiwa_test.cpp  ir_Amcor_test.cpp  ir_Argo_test.cpp  ir_Arris_test.cpp  ir_Bosch_test.cpp  ir_Bose_test.cpp  ir_Carrier_test.cpp  ir_ClimaButler_test.cpp  ir_Coolix_test.cpp  ir_Corona_test.cpp  ir_Daikin_test.cpp  ir_Delonghi_test.cpp  ir_Denon_test.cpp  (+64 more)
lib/RC-switch_mod/: RCSwitch.cpp  RCSwitch.h  README.md  library.json  library.properties  platformio.ini
scripts/: run-analysis.sh
src/: ELECHOUSE_CC1101_SRC_DRV.cpp  ELECHOUSE_CC1101_SRC_DRV.h  RCSwitch.cpp  RCSwitch.h  XPT2046_Bitbang.cpp  XPT2046_Bitbang.h  flash_config.h  globals.cpp  globals.h  lv_fs_if.cpp  lv_fs_if.h  main.cpp  main.h
src/GPIOExpander/: GpioExpander.cpp.back  GpioExpander.h.back
src/GUI/: ButtonHelper.cpp  ButtonHelper.h  ContainerHelper.cpp  ContainerHelper.h  KeyboardHelper.cpp  KeyboardHelper.h  ScreenManager.cpp  ScreenManager.h  constants.h  events.cpp  events.h  fileBrowserHelper.cpp  fileBrowserHelper.h  logo.c  logo.h  settingsButton.cpp  settingsButton.h  spinbox.cpp  spinbox.h
src/backlight/: backlight.cpp  backlight.hpp
src/esp32_smartdisplay/: .piopm  README.md  library.json  platformio.ini
test/: micropython.py  mock_arduino.h  mock_nfc_reader.h  test_main.py  test_nfc.cpp
(+250 files in other folders)
